@@ -23,7 +23,7 @@ writeData(wb, 1, iris)
 addFilter(wb, 1, row = 1, cols = 1:ncol(iris))
 
 ## Equivalently
-writeData(wb, 2, x = iris, filter = TRUE)
+writeData(wb, 2, x = iris, withFilter = TRUE)
 
 ## Similarly
 writeDataTable(wb, 3, iris)
